--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,5 @@
 /* Mobile and Tablet */
 @media (max-width: 1023px) {
-    :root {
-        --header-height: 60px;
-        --navbar-height: 0px;
-    }
     .hide-on-mobile-tablet {
         display: none;
     }
@@ -18,19 +14,16 @@
         margin-top: calc(var(--header-height) + var(--header-sort-bar-height));
     }
     .header__cart-icon {
-        font-size: 2.2rem;
+        height: 35px;
+        margin-top: 6px;
     }
     .header__cart-notice {
-        position: absolute;
-        top: -2px;
-        right: 2px;
-        padding: 1px 4px;
+        top: 8px;
+        right: 6px;
+        padding: 1px 5px;
         font-size: 1.2rem;
         line-height: 1.2rem;
         border-radius: 10px;
-        border: 2px solid #EE4020;
-        background-color: var(--white-color);
-        color: var(--primary-color);
     }
     .header__cart-list {
         position: fixed;
@@ -63,6 +56,10 @@
 
 /* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
+    :root {
+        --header-height: 70px;
+        --navbar-height: 0px;
+    }
     .hide-on-tablet {
         display: none;
     }
@@ -74,6 +71,10 @@
 
 /* Mobile */
 @media (max-width: 739px) {
+    :root {
+        --header-height: 54px;
+        --navbar-height: 0px;
+    }
     .hide-on-mobile {
         display: none;
     }
@@ -133,17 +134,25 @@
     .header__logo-img {
         width: 110px;
     }
-    .footer-mobile {
+    .footer__heading {
         text-align: center;
     }
+    .footer-item__link {
+        padding: 2px 0;
+        justify-content: center;
+    }
     .footer__copyright {
+        height: 80px;
         margin: 30px 40px 0 40px;
     }
     .footer__download {
         justify-content: center;
     }
     .footer-list__wrap {
-        justify-content: space-evenly;
+        justify-content: center;
+    }
+    .footer-item__img {
+        margin: 0 10px;
     }
     .footer__text {
         margin: 4px 40px;
@@ -155,7 +164,7 @@
         flex-direction: row;
     }
     .footer__download-app-link {
-        display: block;
+        display: block; 
         padding: 0 14px;
     }
 }
